# HETSA

./: .gitignore  README.md
FinancialApplication/macd-SEAL/: CMakeCache.txt
FinancialApplications/: output-comparison.ipynb
FinancialApplications/data/: decisions_heaan.csv  decisions_seal.csv  decisions_wma_approx.csv  macd_heaan.csv  macd_seal.csv  noises_inv_plain.csv  pi_samples.csv  prices_inv_plain.csv  sine_interpolated_seal.csv  sine_interpolated_seal_0.csv  sine_interpolated_seal_1.csv  sine_interpolated_seal_2.csv  sine_interpolated_seal_3.csv  small_noises_inv_plain.csv  white_noise_small.csv  wma12_seal.csv  wma26_seal.csv  wma9_heaan.csv  wma9_seal.csv  wma_diff_heaan.csv  wma_diff_seal.csv
FinancialApplications/inverse-test/: inverse-test.cpp  inverse.ipynb  makefile
FinancialApplications/macd-HEAAN/: macd.cpp  makefile
FinancialApplications/macd-Plaintext/: macd.ipynb
FinancialApplications/macd-SEAL/: macd.cpp
FinancialApplications/rsi-Plaintext/: rsi.ipynb
FinancialApplications/sin/sin-HEAAN/: makefile  sin.cpp  sin.ipynb
GeneralToolbox/ARMA-HEAAN/: ARMAtoMA.ipynb  arma.ipynb  arma2ma.cpp  arma2ma_plaintext.cpp  makefile
GeneralToolbox/ARMAtoMA/: ARMAtoMA_plaintext.ipynb
GeneralToolbox/EMA-HEAAN/: ema.cpp  ema.ipynb  makefile
GeneralToolbox/FinancialApplication/: output-comparison.ipynb
GeneralToolbox/FinancialApplications/: output-comparison.ipynb
GeneralToolbox/data/: ema12_heaan.csv
GeneralToolbox/sinc-interpolation/: sinc-interpolation.ipynb
MedicalApplications/: pid.ipynb
MedicalApplications/data/: meal_profile.csv  pid_bergman_recursive_local_G.csv  pid_bergman_recursive_local_G_1.csv  pid_bergman_recursive_local_G_2.csv  pid_bergman_recursive_local_G_3.csv  pid_bergman_recursive_local_I_1.csv  pid_bergman_recursive_local_I_2.csv  pid_bergman_recursive_local_I_3.csv  pid_bergman_recursive_local_X_1.csv  pid_bergman_recursive_plaintext_G.csv  pid_bergman_recursive_plaintext_I.csv  pid_bergman_recursive_plaintext_X.csv  profile.csv  seal_result.csv  seal_result_recursive.csv  seal_result_recursive_socket.csv  seal_result_reencryption.csv  signal.csv  white_noise.csv  white_noise_20.csv
MedicalApplications/pid-SEAL/: CMakeLists.txt  pid.cpp  pid_client  pid_client.cpp  pid_server  pid_server.cpp
MedicalApplications/pid-SEAL/LocalPID/: CMakeLists.txt  pid-bergman.cpp  pid-whitenoise.cpp  plot.ipynb
MedicalApplications/pid-SEAL/RemotePID/: CMakeLists.txt  bergman.cpp  pid-controller.cpp  pid-serialize-test.cpp  socket.cpp
MedicalApplications/pid-plaintext/: CMakeLists.txt  pid-matlab-plaintext.cpp  pid-plaintext.ipynb  pid-recursive.ipynb
MedicalApplications/protobuf/: CMakeLists.txt  add_person.cc  addressbook.pb.cc  addressbook.pb.h  list_people.cc
MedicalApplications/socket_test/: CMakeLists.txt  client.cpp  server.cpp
macd-HEAAN/: macd-heaan.ipynb
macd-HEAAN/data/: decisions_heaan.csv  macd_heaan.csv  wma9_heaan.csv  wma_diff_heaan.csv
macd-HEAAN/run/: macd.cpp  makefile
macd-Plaintext/: macd.ipynb
macd-Plaintext/data/: wma12.csv  wma26.csv  wma9.csv
macd-SEAL/: CMakeLists.txt  macd-seal.ipynb  macd.cpp  main.cpp
macd-SEAL/.ipynb_checkpoints/: MACD-checkpoint.ipynb  MACD_SEAL-checkpoint.ipynb  MACD_cpp-checkpoint.ipynb
macd-SEAL/data/: decisions_seal.csv  macd_seal.csv  wma12_seal.csv  wma26_seal.csv  wma9_seal.csv  wma_diff_seal.csv
(+76 files in other folders)
